--- a/page/style.css
+++ b/page/style.css
@@ -43,3 +43,16 @@ body{
     grid-template-rows: 30vh,30vh,40vh;
     width: 70vw;
 }
+
+.header {
+    display: flex;
+    flex-direction: column;   
+    justify-content: center;
+    border: 2px solid black;
+}
+.forms {
+    display: flex;
+    flex-direction: column;   
+    justify-content: center;
+    border: 2px solid blue;
+}
