--- a/page/style.css
+++ b/page/style.css
@@ -27,11 +27,28 @@ body{
     height: 300px;
     width: var(--width-sidebar);
     display: flex;
+    flex-direction: row;
     align-items: center;
     justify-content: center;
     color: white;
     background-color: rgba(0, 0, 0, 0.542);
 }
+
+.logo .logo-image img{
+    margin-left: 30px;
+    width: 200px;
+    border-radius: 50%;
+}
+
+.logo-header {
+    margin-left: 20px;
+    padding: 10px;
+    letter-spacing: 2px;
+    font-size: 27px;
+    font-weight: 800;
+    font-family: 'Quicksand', sans-serif;
+}
+
 .photo-credit{
     height: 50px;
     width: var(--width-sidebar);
@@ -39,6 +56,7 @@ body{
     align-items: flex-end;
     justify-content: center;
     color: antiquewhite;  
+    font-family: 'Quicksand', sans-serif;
 }
 
 .photo-credit .text-photo a {
