add form first name and email with pattern

--- a/page/style.css
+++ b/page/style.css
@@ -105,6 +105,7 @@ body{
 
 .form-left{
     display: flex;
+    flex-direction: column;
     height: 300px;
     width: 500px;
     background-color: greenyellow;
